--- a/src/css/game.css
+++ b/src/css/game.css
@@ -3,7 +3,7 @@
 .mainScreenOneGame {
   background-color: #9c835f;
   width: 100vw;
-  height: 100vh;
+  height: 100hv;
 }
 
 .textOnePageGame {
@@ -16,27 +16,12 @@
   padding-top: 50px;
 }
 
-/* Navbar */
-
-.textNavGame {
-  color: #ffb548;
-  font-family: Bebas Neue;
-  font-size: 22px;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-}
-
-.sizeNavItem {
-  width: 40px;
-  height: 40px;
-}
-
 /* Contents */
 
 .sizeItem {
   width: 80px;
   height: 75px;
+  margin-top: 30px;
 }
 
 .sizeItemTwo {
@@ -44,8 +29,42 @@
   height: 40px;
 }
 
+.boxChoose {
+  background-color: grey;
+  width: 140px;
+  height: 140px;
+  border-radius: 10%;
+  margin-left: 25px;
+  margin-top: -30px;
+}
+
 .positionItem {
+  color: white;
   text-align: center;
   padding: 10px;
   margin-top: 25px;
+}
+
+/* Score */
+
+.positionItemScoreOne {
+  color: white;
+  text-align: center;
+  padding: 10px;
+  margin-top: 100px;
+}
+
+.positionItemScoreTwo {
+  text-align: center;
+  margin-top: -25px;
+}
+
+.textScoreOne {
+  font-family: Bebas Neue;
+  font-size: 56px;
+}
+
+.textScoreTwo {
+  font-family: Bebas Neue;
+  font-size: 56px;
 }
